src/test/ui/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0599]: no method named `a` found for unit type `()` in the current scope
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:8:12
   |
LL |         ().a()
   |            ^ method not found in `()`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Tr` defines an item `a`, perhaps you need to implement it
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:4:1
   |
LL | pub trait Tr {
   | ^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
